--- a/src/todos/app.html
+++ b/src/todos/app.html
@@ -1,7 +1,7 @@
 <section class="todoapp">
     <header class="header">
         <h1>Tareas</h1>
-        <input id="new-todo-input" class="new-todo" placeholder="¿Qué necesita ser hecho?" autofocus>
+        <input id="new-todo-input" class="new-todo" placeholder="¿Qué necesita ser hecho?" autofocus><!--referencia para crear un nuevo todo-->
     </header>
     
     <!-- This section should be hidden by default and shown when there are todos -->
